test_suite/tests/compile_error_cases/static_func.rs
#[moq::automock]
trait Trait {
    fn f();
}

fn main() {}
